data/all_generated_tests/raw_wast_tests/if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_18.wast
;; 9. **Test Description**: Write an `if-else` scenario where the `else` block contains a loop with a call to an exported function. Check for corrupt stack states or incorrect loop behavior due to improper handling.    - **Constraint Checked**: Proper branching to `else` blocks that involve additional control instructions.    - **Test Relation**: Tests nested control structures and verifies cross-module call handling within loops.

(assert_invalid
  (module
    (func $exported (export "exported") (param i32 i32) (result i32)
      (i32.add)
    )
    (func $test (param i32) (result i32)
      (if (result i32)
        (i32.eqz (local.get 0))
        (then (i32.const 42))
        (else
          (loop $loop
            (call $exported (i32.const 1) (local.get 0))
            (br_if $loop (i32.eqz (local.get 0)))
          )
        )
      )
    )
  )
  "type mismatch"
)